--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,8 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          filename: metrics.plugin.calendar.full.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_sections: recently-used
-          plugin_languages_recent_load: 400
-          plugin_languages_recent_days: 14
-          filename: metrics.plugin.topics.icons.recently.svg
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          filename: metrics.plugin.topics.icons.svg
+          base: ""
+          plugin_calendar: yes
+          plugin_calendar_limit: 0
